kubernetes/apps/kavita/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Kavita"
  name: kavita
  namespace: kavita
spec:
  hostnames: ["kavita.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kavita
          namespace: kavita
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
